# protochain

./: README.md  blockchain-simple.cabal  stack.yaml
app/: Main.hs
src/: Chain.hs  Common.hs  Logging.hs  Messaging.hs  P2P.hs  WebServer.hs
