name:                blockchain-simple
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/blockchain-simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chain, Messaging
  build-depends:
    base              >= 4.7    && < 5.0,
    bytestring        >= 0.10   && < 0.11,
    binary            >= 0.8.3  && <0.8.4,
    base64-bytestring >= 1.0    && < 1.1,
    aeson             >= 1.0    && < 1.1,
    memory            >= 0.14   && < 0.15,
    cryptonite        >= 0.21   && < 0.30,
    time              >= 1.6    && < 1.7,
    text              >= 1.2    && < 1.3,
    cereal            >= 0.5    && < 0.6,
    distributed-process >= 0.6.6 && < 0.6.7,
    distributed-process-p2p >= 0.1.3.2 && < 0.1.3.3,
    protolude         >= 0.1.10 && < 0.2

  default-language:    Haskell2010

executable blockchain-simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blockchain-simple
  default-language:    Haskell2010

test-suite blockchain-simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blockchain-simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/blockchain-simple
